crates/textweaver-formats/tests/it/snapshots/it__fixtures__sample_txt_document.snap
---
source: crates/textweaver-formats/tests/it/fixtures.rs
assertion_line: 68
expression: view(&doc)
---
{
  "markers": [],
  "meta": {
    "author": null,
    "format": "text",
    "language": null,
    "path": null,
    "title": "sample.txt"
  },
  "text": "The Reading Room\n\nDr. Smith opened the library at 9:30 a.m. on Friday, September 25, 2026. She had\nread 1,250 pages that month, which cost her about $12.50 in late fees. Was it\nworth it? Absolutely!\n\nThe first chapter covers e.g. the history of print, i.e. how movable type changed\nreading. Mr. O'Brien's well-known essay (pp. 12-14) argues otherwise... but few\nagree. The café on 3rd St. sells crème brûlée for €4.\n\nChapter two begins here. It has three sentences. This is the third one.\n\nContact: reader@example.org or https://example.org/help. Temperature: 72°F; ratio\n3/4; version 2.0.1; 50% off; 1st, 2nd and 3rd place. \"Quoted speech,\" she said.\n"
}
