crates/textweaver-formats/tests/it/snapshots/it__fixtures__sample_txt_narration.snap
---
source: crates/textweaver-formats/tests/it/fixtures.rs
expression: narration(&doc)
---
[
  "The Reading Room",
  "Dr. Smith opened the library at 9:30 a.m. on Friday, September 25, 2026.",
  "She had\nread 1,250 pages that month, which cost her about $12.50 in late fees.",
  "Was it\nworth it?",
  "Absolutely!",
  "The first chapter covers e.g. the history of print, i.e. how movable type changed\nreading.",
  "Mr. O'Brien's well-known essay (pp. 12-14) argues otherwise... but few\nagree.",
  "The café on 3rd St. sells crème brûlée for €4.",
  "Chapter two begins here.",
  "It has three sentences.",
  "This is the third one.",
  "Contact: reader@example.org or https://example.org/help.",
  "Temperature: 72°F; ratio\n3/4; version 2.0.1; 50% off; 1st, 2nd and 3rd place.",
  "\"Quoted speech,\" she said."
]
